src/snapshots/tests__fof_atomic_formula-7.snap
---
source: src/tests.rs
expression: parsed
---
System(
    FofSystemAtomicFormula(
        Constant(
            SystemConstant(
                SystemFunctor(
                    AtomicSystemWord(
                        DollarDollarWord(
                            LowerWord(
                                "system",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
