src/snapshots/tests__fof_atomic_formula.snap
---
source: src/tests.rs
expression: parsed
---
Defined(
    Plain(
        FofDefinedPlainFormula(
            FofDefinedPlainTerm(
                DefinedConstant(
                    DefinedFunctor(
                        AtomicDefinedWord(
                            DollarWord(
                                LowerWord(
                                    "true",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
