src/snapshots/tests__fof_binary_assoc-3.snap
---
source: src/tests.rs
expression: parsed
---
And(
    FofAndFormula(
        [
            Unitary(
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            Unitary(
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "q",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
