src/snapshots/tests__fof_binary_nonassoc-3.snap
---
source: src/tests.rs
expression: parsed
---
FofBinaryNonassoc {
    left: Unitary(
        Atomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    op: NotOr,
    right: Unitary(
        Atomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "q",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
