src/snapshots/tests__fof_binary_nonassoc.snap
---
source: src/tests.rs
expression: parsed
---
FofBinaryNonassoc {
    left: Unitary(
        Atomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    op: LRImplies,
    right: Unitary(
        Atomic(
            Plain(
                FofPlainAtomicFormula(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "q",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
