src/snapshots/tests__fof_defined_atomic_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Plain(
    FofDefinedPlainFormula(
        Constant(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "false",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
