src/snapshots/tests__fof_defined_atomic_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
Infix(
    FofDefinedInfixFormula {
        left: Function(
            Plain(
                Function(
                    Functor(
                        Lower(
                            LowerWord(
                                "f",
                            ),
                        ),
                    ),
                    FofArguments(
                        [
                            Variable(
                                Variable(
                                    UpperWord(
                                        "X",
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
        op: DefinedInfixPred(
            InfixEquality,
        ),
        right: Function(
            Plain(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
