src/snapshots/tests__fof_defined_atomic_formula.snap
---
source: src/tests.rs
expression: parsed
---
Plain(
    FofDefinedPlainFormula(
        Constant(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "true",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
