src/snapshots/tests__fof_defined_atomic_term.snap
---
source: src/tests.rs
expression: parsed
---
FofDefinedAtomicTerm(
    Constant(
        DefinedConstant(
            DefinedFunctor(
                AtomicDefinedWord(
                    DollarWord(
                        LowerWord(
                            "defined_atomic_term",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
