src/snapshots/tests__fof_defined_plain_formula.snap
---
source: src/tests.rs
expression: parsed
---
FofDefinedPlainFormula(
    Constant(
        DefinedConstant(
            DefinedFunctor(
                AtomicDefinedWord(
                    DollarWord(
                        LowerWord(
                            "defined_plain_formula",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
